fix overflow causing bad site

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -10,3 +10,7 @@
 	background-position: center;
 	background-size: contain !important;
 }
+
+html, body {
+	overflow-x: scroll;
+}
